# brighter-users-ms

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  auth.py  cache.py  crud.py  deps.py  limiter.py  logging.py  models.py  schemas.py  scopes.py  settings.py  telemetry.py
app/routers/: auth.py  contact.py  scopes.py  users.py
migrations/models/: 0001_initial.py  0002_auto_20260504_0137.py  0003_auto_20260507_0026.py
scripts/: export_openapi.py  seed.py
tests/: conftest.py  test_google_auth.py  test_grant_role.py  test_telemetry.py  test_users_auth.py
tests/integration/: test_cache.py
