[project]
name = "brighter-users-ms"
version = "0.1.0"
description = "Users & auth microservice for the BrighterProject platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.112.4",
    "ms-core",
    "pydantic>=2.11.7",
    "tortoise-orm[asyncpg]>=1.1.7",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "redis>=7.2.0",
    "loguru>=0.7.3",
    "google-auth>=2.48.0",
    "aiosmtplib>=5.1.0",
    "httpx>=0.28.1",
    "slowapi>=0.1.9",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-instrumentation-asyncpg>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-exporter-prometheus>=0.63b1",
    "prometheus-client>=0.25.0",
]
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
addopts = "-v -m 'not integration'"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live Redis instance (deselected by default; run with -m integration)",
]

[tool.pyright]
reportInvalidTypeForm = "none"

[tool.uv.sources]
ms-core = { url = "https://github.com/HexChap/MSCore/archive/refs/heads/master.zip" }

[tool.tortoise]
tortoise_orm = "main.TORTOISE_ORM"
